--- a/RUBY/first_vagrant_box/user_login_project/Gemfile
+++ b/RUBY/first_vagrant_box/user_login_project/Gemfile
@@ -32,8 +32,8 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
-# For Rails Console:
-gem 'hirb' 
+# For Rails Only
+gem 'hirb'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
